# penix-test

./: .gitignore  CMakeLists.txt  Readme.md
include/: ptest.h
src/: ptest_add.c  ptest_comment.c  ptest_init.c  ptest_run.c  ptest_test.c  ptest_test.h
src/lib/: struct.h
test/: Makefile  main.c  output
